[package]
name = "kubectl-conda"
version = "0.1.0"
edition = "2021"
decription = "Kubernetes + Conda = Manage Conda Environments as K8S Volumes"
authors = ["Jon Velando <rigzba21>"]
license-file = "LICENSE"
repository = "https://github.com/rigzba21/kubectl-conda"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.69.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
